# configoose

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  configoose.cli.rst  configoose.cli.subcommand.rst  configoose.database.rst  configoose.protocol.rst  configoose.rst  configoose.util.rst  configurators.rst  extending.rst  files.rst  index.rst  intro.rst  modules.rst  quickstart.rst
src/configoose/: __init__.py  __main__.py  configurator.py
src/configoose/cli/: __init__.py  util.py
src/configoose/cli/subcommand/: conf.py  find.py  moor.py  unmoor.py
src/configoose/database/: __init__.py
src/configoose/protocol/: abc.py  configparser.py  iterative.py  methodic.py  raw.py
src/configoose/util/: algorithm.py  digattr.py  dispatcher.py  split_preamble.py
