[metadata]
name = configoose
version = 2024.06.01
author = Eric Ringeisen
author_email = 
description = Manage configuration files location
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gribouillis/configoose.git
project_urls =
    Bug Tracker = https://github.com/Gribouillis/configoose.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
	
	
[options.packages.find]
where = src

